--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=mycook
-DB_USERNAME=laravel
+DB_USERNAME=mycook_backend
 DB_PASSWORD=MyC00k1324
 
 BROADCAST_DRIVER=log
